fixed up Layout issues - part 1

--- a/public/css/orderform.css
+++ b/public/css/orderform.css
@@ -1,134 +1,161 @@
 body {
-    font-family: "Roboto-Regular", sans-serif;
+	font-family: "Roboto-Regular", sans-serif;
 }
 
 .orderform-panel > .panel-heading {
-    color: #333;
-    border-color: #fff;
-    text-align: center;
+	color: #333;
+	border-color: #fff;
+	text-align: center;
 }
 
 .orderform-panel > .panel-heading a {
-    color: #4e5c6e;
-    font-size: 14px;
-    -webkit-transition: all 0.1s linear;
-    -moz-transition: all 0.1s linear;
-    transition: all 0.1s linear;
+	color: #4e5c6e;
+	font-size: 14px;
+	-webkit-transition: all 0.1s linear;
+	-moz-transition: all 0.1s linear;
+	transition: all 0.1s linear;
 }
 
 .orderform {
-    width: 100%;
+	width: 100%;
 }
 
 .orderform-label {
-    color: #7f8fa4;
-    font-size: 11px;
+	color: #7f8fa4;
+	font-size: 11px;
 }
 .orderform-pointer {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .orderform-input {
-    height: 28px;
-    font-size: 12px;
-    color: #2d2d2d;
-    text-align: left;
-    width: 100%;
-    display: block;
-    border: none;
+	height: 28px;
+	font-size: 12px;
+	color: #2d2d2d;
+	text-align: left;
+	width: 100%;
+	display: block;
+	border: none;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+	-webkit-appearance: none;
+	margin: 0;
 }
 
 .orderform-input:focus {
-    outline: none;
+	outline: none;
 }
 
 .orderform-input-symbol-container {
-    height: 28px;
-    padding-top: 5px;
-    padding-right: 10px;
-    font-family: "Roboto-Regular", sans-serif;
-    color: #9ba6b2;
-    font-size: 12px;
-    background-color: #fafafa;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    text-align: right;
+	height: 28px;
+	padding-top: 5px;
+	padding-right: 10px;
+	font-family: "Roboto-Regular", sans-serif;
+	color: #9ba6b2;
+	font-size: 12px;
+	background-color: #fafafa;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	text-align: right;
 }
 
 .orderform-input-symbol-container:hover {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .orderform-container {
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 20px;
+	padding-left: 40px;
+	padding-right: 40px;
+	padding-bottom: 16px;
 }
 
 .orderform-button-buy {
-    background-color: #1f5af6 !important;
+	background-color: #1f5af6 !important;
 }
 .orderform-button-sell {
-    background-color: #e5494d !important;
+	background-color: #e5494d !important;
 }
 
 .orderform-button {
-    width: 100% !important;
-    height: 36px;
-    border-radius: 2px;
-    border-width: 0px;
+	width: 100% !important;
+	height: 36px;
+	border-radius: 2px;
+	border-width: 0px;
 }
 
 .orderform-input-container {
-    margin-top: 5px;
+	margin-top: 5px;
 }
 
 .orderform-content-container {
-    padding: 0px;
-    border: 1px solid #dae1e9;
+	padding: 0px;
+	border: 1px solid #dae1e9;
 }
 
 .orderform-header {
-    height: 40px;
-    padding-top: 5px;
+	height: 40px;
+	padding-top: 5px;
 }
 
 .orderform-sell-active {
-    color: #e5494d;
-    border-top: 2px solid #e5494d;
-    border-left: 1px solid #edf0f4;
+	color: #e5494d;
+	border-top: 2px solid #e5494d;
+	border-left: 1px solid #edf0f4;
 }
 
 .orderform-buy-active {
-    color: #4e5c6e;
-    border-top: 2px solid #1f5af6;
-    border-right: 1px solid #edf0f4;
+	color: #4e5c6e;
+	border-top: 2px solid #1f5af6;
+	border-right: 1px solid #edf0f4;
 }
 
 .button-container {
-    /* padding: 1%; */
-    margin: 5% 0;
-    /* background-color: #000; */
+	/* padding: 1%; */
+	margin: 5% 0;
+	/* background-color: #000; */
 }
 
 .button-container button {
-    background-color: #fff;
-    border: 2px solid #edf0f4;
-    padding: 0 20%;
-    border-radius: 4px;
+	background-color: #fff;
+	border: 2px solid #edf0f4;
+	padding: 0 20%;
+	border-radius: 4px;
 }
 
 .button-container button:focus {
-    outline: none;
+	outline: none;
 }
 
 .button-container .active {
-    border: 1px solid #1f5af6;
-    color: #1f5af6;
+	border: 1px solid #1f5af6;
+	color: #1f5af6;
+}
+
+.custom-panel {
+	background-color: #fff;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+}
+
+#asks-general,
+#bids-general {
+	height: 11vh !important;
+}
+
+@media (min-width: 1270px) {
+	#asks-general,
+	#bids-general {
+		height: 13vh !important;
+	}
+}
+
+@media (min-width: 1900px) {
+	#asks-general,
+	#bids-general {
+		height: 16vh !important;
+	}
 }
